# badminton-video-trimmer

./: .dockerignore  .env_example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
src/: main.py
src/configs/: opts.py
src/datasets/: data_utils.py  tad_dataset.py
src/models/: tadtr.py  transformer.py  video_encoder.py
src/models/ops/roi_align/: roi_align.py
src/models/ops/temporal_deform_attn/: temporal_deform_attn.py
src/models/video_encoder_archs/: slowfast.py  tsm.py
src/predicting/: inference.py  rally_predictor.py  segment_merger.py
src/summary_generator/: summary_generator.py
src/tools/: frame_extractor.py  youtube_downloader.py
src/util/: misc.py  moviepy_bar_logger.py  persistent_stqdm.py  video_util.py
src/youtube_download/: downloader.py
