# consulted https://github.com/pypa/sampleproject/blob/main/pyproject.toml
[build-system]
requires = ["setuptools", "wheel", "pip"] 
build-backend = "setuptools.build_meta"
[project]
name = "badminton-video-trimmer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.5.2",
    "click==8.1.7",
    "easydict==1.13",
    "einops==0.8.0",
    "exceptiongroup==1.2.2",
    "ffpb==0.4.1",
    "h11==0.14.0",
    "h5py==3.11.0",
    "huggingface-hub==0.26.2",
    "idna",
    "moviepy==1.0.3",
    "opencv-python==4.10.0.84",
    "pandas==2.0.3",
    "pydantic==2.9.2",
    "pydantic-core==2.23.4",
    "pytubefix==8.12.3",
    "pyyaml==6.0.2",
    "scipy==1.10.1",
    "sniffio==1.3.1",
    "starlette==0.40.0",
    "streamlit==1.39.0",
    "typing-extensions==4.12.2",
]

[project.optional-dependencies]
cpu = ["torch==2.4.1", "torchvision==0.19.1"]
cu121 = ["torch==2.4.1", "torchvision==0.19.1"]

[tool.uv]
conflicts = [[{ extra = "cpu" }, { extra = "cu121" }]]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu121", extra = "cu121" },
]
torchvision = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu121", extra = "cu121" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
